[package]
name = "rusty-raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
axum-macros = "0.4.1"
clap = "4.4.2"
color-eyre = "0.6.2"
reqwest = { version = "0.11.20", features = ["serde_json", "json"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
