[package]
name = "rusty-raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
axum-macros = "0.4.1"
clap = { version = "4.4.2", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.31"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["serde_json", "json"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.128"
tokio = { version = "1.32.0", features = ["full"] }
tokio-serde = { version = "0.9.0", features = ["json", "serde_json"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tower-http = { version = "0.6.1", features = ["timeout"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
